--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/springboot
-spring.datasource.username=postgres
-spring.datasource.password=pass
+spring.datasource.username=shane
+spring.datasource.password=java
 
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
